hphp/hack/test/typecheck/typedef_bad_error_message.php.exp
File "typedef_bad_error_message.php", line 6, characters 10-24:
Some elements in this collection are incompatible (Typing[4110])
  File "typedef_bad_error_message.php", line 5, characters 20-22:
  Expected `int`
  File "typedef_bad_error_message.php", line 3, characters 23-23:
    via this generic `T`
  File "typedef_bad_error_message.php", line 6, characters 19-22:
  But got `string`
